--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
       "url": "git+https://git.codificar.com.br/react-components/react-native-finance"
     },
     "dependencies": {
-      "react-native-elements": "^3.0.0-alpha.1"
+      "react-native-elements": "^3.0.0-alpha.1",
+      "react-native-calendar-picker": "^6.0.1"
     },
     
     "peerDependencies": {
