--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
       "react-native-elements": "^3.0.0-alpha.1",
       "react-native-calendar-picker": "^6.0.1",
       "react-native-chart-kit": "^6.7.0",
-      "@react-navigation/native": "^5.9.3"
+      "@react-navigation/drawer": "^5.12.4",
+      "@react-navigation/native": "^5.9.3",
+      "@react-navigation/stack": "^5.14.3"
     },
     
     "peerDependencies": {
