--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
       "react-native-chart-kit": "^6.7.0",
       "@react-navigation/drawer": "^5.12.4",
       "@react-navigation/native": "^5.9.3",
-      "@react-navigation/stack": "^5.14.3"
+      "@react-navigation/stack": "^5.14.3",
+      "react-native-qrcode-svg": "^6.1.2"
     },
     
     "peerDependencies": {
