--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     },
     "dependencies": {
       "@codificar/use-log-errors": "git+https://libs:ofImhksJ@git.codificar.com.br/react-components/use-log-errors.git",
+      "@react-native-clipboard/clipboard": "^1.11.2",
       "react-native-elements": "^3.0.0-alpha.1",
       "react-native-calendar-picker": "^6.0.1",
       "react-native-chart-kit": "^6.7.0",
