--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+  {
     "name": "react-native-finance",
     "version": "1.0.0",
     "description": "A component for earnings report and account statement",
@@ -7,13 +7,12 @@
       "test": "echo \"Error: no test specified\" && exit 1"
     },
     "license": "MIT",
-
     "repository": {
       "type": "git",
-      "url": "git+https://git.codificar.com.br/react-components/react-native-finance"
+      "url": "git+https://github.com/codificar/react-components-react-native-finance"
     },
     "dependencies": {
-      "@codificar/use-log-errors": "git+https://libs:ofImhksJ@git.codificar.com.br/react-components/use-log-errors.git",
+      "@codificar/use-log-errors": "git+https://github.com/codificar/react-components-use-log-errors",
       "react-native-elements": "^3.0.0-alpha.1",
       "react-native-calendar-picker": "^6.0.1",
       "react-native-chart-kit": "^6.7.0",
@@ -30,9 +29,8 @@
     "author": "Codificar",
 
     "bugs": {
-      "url": "https://git.codificar.com.br/react-components/react-native-finance/issues"
+      "url": "https://github.com/codificar/react-components-react-native-finance/issues"
     },
-
-    "homepage": "https://git.codificar.com.br/react-components/react-native-finance#readme"
+    "homepage": "https://github.com/codificar/react-components-react-native-finance#readme"
   }
 
